Fix typo, and grammatical mistake.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Welcome to Adedapo Ayodeji portofolio.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.scss">
     <link rel="icon" href="/logo.ico">
     <title>Adedapo Ayodeji</title>
 </head>
@@ -20,7 +21,6 @@
 
                     <input type="checkbox" name="" id="theme">
                     <section>
-
                         <svg id="moon" class="moon w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
                             xmlns="http://www.w3.org/2000/svg">
                             <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
@@ -39,15 +39,9 @@
         <div class="hero">
             <div class="hero_text">
                 <h1>Web Frontend Developer</h1>
-                <p class="hero_text_p">Hello! I'm Ayodeji Victor Adedapo, a Frontend Developer for web, and also UI
-                    Designer, I love
-                    creating
-                    beatiful and appleasing User interfaces for users. In my spare time, I work on CSS animation,
-                    explore libraries. My
-                    skills includes <span class="lang">HTML</span>, <span class="lang">CSS</span>, <span
+                 <p class="hero_text_p">Hello! I'm Ayodeji Victor Adedapo, a Frontend Developer for the web, and I love creating beautiful and appealing User
+                interfaces for the user. In my spare time, I work on CSS animation, explore libraries. My skills includes <span class="lang">HTML</span>, <span class="lang">CSS</span>, <span
                         class="lang">Javascript</span>, <span class="lang">React js</span>.
-                    <!--  I currently joined an internship program organised
-                        by HNG, I4G, and Zuri, to improve my skills.</p> -->
                 <div class="external_link">
                     <a class="link" target="_blank" rel="noreferrer noopener"
                         href="https://docs.google.com/document/d/1KOTkpFIT3ZiNuAIy0vroaOkA-aNYbcG5YNX19LlYQSY/edit?usp=sharing"><svg
