--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="style_wrapper">
         <nav>
             <a class="site_logo" href="/">Adedapo Ayodeji</a>
-            <div class="logo">
+            <button class="logo">
                 <label for="theme">
 
                     <input type="checkbox" name="" id="theme">
@@ -34,14 +34,16 @@
 
                     </section>
                 </label>
-            </div>
+            </button>
         </nav>
         <div class="hero">
             <div class="hero_text">
                 <h1>Web Frontend Developer</h1>
-                 <p class="hero_text_p">Hello! I'm Ayodeji Victor Adedapo, a Frontend Developer for the web, and I love creating beautiful and appealing User
-                interfaces for the user. In my spare time, I work on CSS animation, explore libraries. My skills includes <span class="lang">HTML</span>, <span class="lang">CSS</span>, <span
-                        class="lang">Javascript</span>, <span class="lang">React js</span>.
+                <p class="hero_text_p">Hello! I'm Ayodeji Victor Adedapo, a Frontend Developer for the web, and I love
+                    creating beautiful and appealing User
+                    interfaces for the user. In my spare time, I work on CSS animation, explore libraries. My skills
+                    includes <span class="lang">HTML</span>, <span class="lang">CSS</span>, <span
+                        class="lang">Javascript</span>, <span class="lang">React js,</span> and more.
                 <div class="external_link">
                     <a class="link" target="_blank" rel="noreferrer noopener"
                         href="https://docs.google.com/document/d/1KOTkpFIT3ZiNuAIy0vroaOkA-aNYbcG5YNX19LlYQSY/edit?usp=sharing"><svg
@@ -86,6 +88,7 @@
             </div>
 
         </div>
+        <div class="cursor"></div>
         <script src="index.js"></script>
 </body>
 
