--- a/index.html
+++ b/index.html
@@ -6,8 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Welcome to Adedapo Ayodeji's portofolio.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Primary Meta Tags -->
+    <title>Adedapo Ayodeji — Portfolio</title>
+    <meta name="title" content="Adedapo Ayodeji — Portfolio">
+    <meta name="description" content="Hello! Welcome to my personal portfolio">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:title" content="Adedapo Ayodeji — Portfolio">
+    <meta property="og:description" content="Hello! Welcome to my personal portfolio">
+    <meta property="og:image"
+        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:title" content="Adedapo Ayodeji — Portfolio">
+    <meta property="twitter:description" content="Hello! Welcome to my personal portfolio">
+    <meta property="twitter:image"
+        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styles.scss">
     <link rel="icon" href="/logo.ico">
     <title>Adedapo Ayodeji</title>
 </head>
