--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
     <meta property="og:url" content="hhttps://wonderful-kepler-2ad1ff.netlify.app/">
     <meta property="og:title" content="Adedapo Ayodeji — Portfolio">
     <meta property="og:description" content="Hello! Welcome to my personal portfolio">
-    <meta property="og:image"
-        content="https://github.com/victor-codes/portfolio/blob/main/logo.jpg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/victor-codes/portfolio/main/logo.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="hhttps://wonderful-kepler-2ad1ff.netlify.app/">
     <meta property="twitter:title" content="Adedapo Ayodeji — Portfolio">
     <meta property="twitter:description" content="Hello! Welcome to my personal portfolio">
-    <meta property="twitter:image"
-        content="https://github.com/victor-codes/portfolio/blob/main/logo.jpg">
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/victor-codes/portfolio/main/logo.jpg">
 
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/logo.ico">
