--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
     <div class="style_wrapper">
         <nav>
             <a class="site_logo" href="/">Adedapo Ayodeji</a>
-            <button class="logo">
+            <button class="logo" role="switch" aria-label="Change Mode">
                 <label for="theme">
-
                     <input type="checkbox" name="" id="theme">
                     <section>
                         <svg id="moon" class="moon w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
