--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="style_wrapper">
         <nav>
             <a class="site_logo" href="/">Adedapo Ayodeji</a>
-            <button class="logo" role="switch" aria-label="Change Mode">
+            <button class="logo" aria-label="Change Mode">
                 <label for="theme">
                     <input type="checkbox" name="" id="theme">
                     <section>
