--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
             </div>
             <div class="hero_image">
                 <img title="Nkyinkyim (A journey is not straight, it has twists and turns): By Derrick Ofosu Boateng"
-                    src="/hero_image.jpg" alt="portrait picture of adedapo ayodeji victor">
+                    src="/hero_image.webp"
+                    alt="Nkyinkyim (A journey is not straight, it has twists and turns): By Derrick Ofosu Boateng">
             </div>
 
         </div>
