--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         <div class="hero">
             <div class="hero_text">
                 <h1>Web Frontend Developer</h1>
-                <p class="hero_text_p">Hello! I'm Ayodeji Victor Adedapo, a Frontend Developer for the web, and I love
+                <p class="hero_text_p">Hello! I'm Ayodeji Victor Adedapo, a Frontend Developer for the web, focused on
                     creating beautiful and appealing User
-                    interfaces for the user. In my spare time, I work on CSS animation, explore libraries. My skills
+                    interfaces. In my spare time, I work on CSS animation, explore libraries. My skills
                     includes <span class="lang">HTML</span>, <span class="lang">CSS</span>, <span
-                        class="lang">Javascript</span>, <span class="lang">React js,</span> and more.
+                        class="lang">Javascript</span>, <span class="lang">React js,</span> <span class="lang">Next js,</span> and more.
                 <div class="external_link">
                     <a class="link" target="_blank" rel="noreferrer noopener"
                         href="https://docs.google.com/document/d/1KOTkpFIT3ZiNuAIy0vroaOkA-aNYbcG5YNX19LlYQSY/edit?usp=sharing"><svg
