--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Adedapo Ayodeji — Portfolio">
+    <meta name="title" content="Favour Akinsomi — Portfolio">
     <meta name="description" content="Hello! Welcome to my personal portfolio">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="hhttps://wonderful-kepler-2ad1ff.netlify.app/">
-    <meta property="og:title" content="Adedapo Ayodeji — Portfolio">
+    <meta property="og:title" content="Favour Akinsomi — Portfolio">
     <meta property="og:description" content="Hello! Welcome to my personal portfolio">
-    <meta property="og:image" content="https://raw.githubusercontent.com/victor-codes/portfolio/main/logo.jpg">
+    <meta property="og:image" content="https://i.pinimg.com/564x/03/72/90/03729001a56df746ed4ccbabc556db95.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="hhttps://wonderful-kepler-2ad1ff.netlify.app/">
-    <meta property="twitter:title" content="Adedapo Ayodeji — Portfolio">
+    <meta property="twitter:title" content="Favour Akinsomi — Portfolio">
     <meta property="twitter:description" content="Hello! Welcome to my personal portfolio">
-    <meta property="twitter:image" content="https://raw.githubusercontent.com/victor-codes/portfolio/main/logo.jpg">
+    <meta property="twitter:image" content="https://i.pinimg.com/564x/03/72/90/03729001a56df746ed4ccbabc556db95.jpg">
 
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/logo.ico">
-    <title>Adedapo Ayodeji</title>
+    <title>Favour Akinsomi</title>
 </head>
 
 <body>
     <div class="style_wrapper">
         <nav>
-            <a class="site_logo" href="/">Adedapo Ayodeji</a>
+            <a class="site_logo" href="/">Favour Akinsomi</a>
             <button class="logo" aria-label="Change Mode">
                 <label for="theme">
                     <input type="checkbox" name="" id="theme">
@@ -51,11 +51,12 @@
         <div class="hero">
             <div class="hero_text">
                 <h1>Web Frontend Developer</h1>
-                <p class="hero_text_p">Hello! I'm Ayodeji Victor Adedapo, a Frontend Developer for the web, focused on
-                    creating beautiful and appealing User
-                    interfaces. In my spare time, I work on CSS animation, explore libraries. My skills
-                    includes <span class="lang">HTML</span>, <span class="lang">CSS</span>, <span
-                        class="lang">Javascript</span>, <span class="lang">React js,</span> <span class="lang">Next js,</span> and more.
+                <p class="hero_text_p">Hello I'm Dred Ola, a Crypto trader, tutor, analyst and researcher, focused on
+                    onboarding new generation of crypto enthusiasts, building narratives and creating cryptobased
+                    contents. I enjoy researching on economical tools and theories and as a result developed an in-depth
+                    knowledge of general economics. I am also fascinated by technology and it's concomitant and wish to
+                    delve into it later on in the future. However as of now I am well versed in Defi, NFTs, crypto
+                    narratives, content creation, Onchain analysis, and economics.
                 <div class="external_link">
                     <a class="link" target="_blank" rel="noreferrer noopener"
                         href="https://docs.google.com/document/d/1KOTkpFIT3ZiNuAIy0vroaOkA-aNYbcG5YNX19LlYQSY/edit?usp=sharing"><svg
@@ -70,34 +71,37 @@
                             <path
                                 d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-2.023 2.309-3.178 3.927-1.964L5.455 4.64 12 9.548l6.545-4.91 1.528-1.145C21.69 2.28 24 3.434 24 5.457z" />
                         </svg>Email</a>
-                    <a class="link" target="_blank" rel="noreferrer noopener" href="https://twitter.com/ayodejiv5"><svg
-                            role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <a class="link" target="_blank" rel="noreferrer noopener"
+                        href="https://twitter.com/dred_ola?t=CczJ2lnT74JpzEaQTxggBQ&s=09"><svg role="img"
+                            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <title>Twitter</title>
                             <path
                                 d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z" />
                         </svg>Twitter</a>
-                    <a class="link" target="_blank" rel="noreferrer noopener"
-                        href="https://www.github.com/victor-codes"><svg role="img" viewBox="0 0 24 24"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <title>GitHub</title>
+                    <a class="link" target="_blank" rel="noreferrer noopener" href="http://wa.me+2349032447425"><svg
+                            role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <title>WhatsApp</title>
                             <path
                                 d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
-                        </svg>Github</a>
-                    <a class="link" target="_blank" rel="noreferrer noopener"
-                        href="https://codepen.io/victor-codes"><svg role="img" viewBox="0 0 24 24"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <title>CodePen</title>
+                        </svg>WhatsApp</a>
+                    <a class="link" target="_blank" rel="noreferrer noopener" href=""><svg role="img"
+                            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <title>Discor</title>
                             <path
-                                d="M18.144 13.067v-2.134L16.55 12zm1.276 1.194a.628.628 0 01-.006.083l-.005.028-.011.053-.01.031c-.005.016-.01.031-.017.047l-.014.03a.78.78 0 01-.021.043l-.019.03a.57.57 0 01-.08.1l-.026.025a.602.602 0 01-.036.03l-.029.022-.01.008-6.782 4.522a.637.637 0 01-.708 0L4.864 14.79l-.01-.008a.599.599 0 01-.065-.052l-.026-.025-.032-.034-.021-.028a.588.588 0 01-.067-.11l-.014-.031a.644.644 0 01-.017-.047l-.01-.03c-.004-.018-.008-.036-.01-.054l-.006-.028a.628.628 0 01-.006-.083V9.739c0-.028.002-.055.006-.083l.005-.027.011-.054.01-.03a.574.574 0 01.12-.217l.031-.034.026-.025a.62.62 0 01.065-.052l.01-.008 6.782-4.521a.638.638 0 01.708 0l6.782 4.521.01.008.03.022.035.03c.01.008.017.016.026.025a.545.545 0 01.08.1l.019.03a.633.633 0 01.021.043l.014.03c.007.016.012.032.017.047l.01.031c.004.018.008.036.01.054l.006.027a.619.619 0 01.006.083zM12 0C5.373 0 0 5.372 0 12 0 18.627 5.373 24 12 24c6.628 0 12-5.372 12-12 0-6.627-5.372-12-12-12m0 10.492L9.745 12 12 13.51 14.255 12zm.638 4.124v2.975l4.996-3.33-2.232-1.493zm-6.272-.356l4.996 3.33v-2.974l-2.764-1.849zm11.268-4.52l-4.996-3.33v2.974l2.764 1.85zm-6.272-.356V6.41L6.366 9.74l2.232 1.493zm-5.506 1.549v2.134L7.45 12Z" />
-                        </svg>Codepen</a>
+                                d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
+                        </svg>Discord</a>
+                    <a class="link" target="_blank" rel="noreferrer noopener" href="https://t.me/ola_dred"><svg
+                            role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <title>Telegram</title>
+                            <path
+                                d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
+                        </svg>Telegram</a>
                 </div>
                 <div>
                 </div>
             </div>
             <div class="hero_image">
-                <img title="Nkyinkyim (A journey is not straight, it has twists and turns): By Derrick Ofosu Boateng"
-                    src="/hero_image.webp"
-                    alt="Nkyinkyim (A journey is not straight, it has twists and turns): By Derrick Ofosu Boateng">
+                <img title="" src="https://i.pinimg.com/564x/03/72/90/03729001a56df746ed4ccbabc556db95.jpg" alt="">
             </div>
 
         </div>
