--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </nav>
         <div class="hero">
             <div class="hero_text">
+                <h1>Crypto Analyst & Researcher</h1>
                 <p class="hero_text_p">Hello I'm Dred Ola, a Crypto trader, tutor, analyst and researcher, focused on
                     onboarding new generation of crypto enthusiasts, building narratives and creating cryptobased
                     contents. I enjoy researching on economical tools and theories and as a result developed an in-depth
