--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
                     narratives, content creation, Onchain analysis, and economics.
                 <div class="external_link">
                     <a class="link" target="_blank" rel="noreferrer noopener" Reply
-                        href="https://docs.google.com/document/d/1KOTkpFIT3ZiNuAIy0vroaOkA-aNYbcG5YNX19LlYQSY/edit?usp=sharing"><svg
+                        href="https://docs.google.com/document/d/1l0rhkOEgJaMmBr4ajFucmHUwvowzYg88CciQnCV6vrM/edit?usp=sharing"><svg
                             class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                             xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
                         </svg>Resumè</a>
-                    <a class="link" target="_blank" rel="noreferrer noopener" href="mailto:ayodejiv5@gmail.com"><svg
+                    <a class="link" target="_blank" rel="noreferrer noopener" href="mailto:favourakinsomi@gmail.com
+                    "><svg
                             role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <title>Gmail</title>
                             <path
