--- a/index.html
+++ b/index.html
@@ -51,12 +51,7 @@
         <div class="hero">
             <div class="hero_text">
                 <h1>Crypto Analyst & Researcher</h1>
-                <p class="hero_text_p">Hello I'm Dred Ola, a Crypto trader, tutor, analyst and researcher, focused on
-                    onboarding new generation of crypto enthusiasts, building narratives and creating cryptobased
-                    contents. I enjoy researching on economical tools and theories and as a result developed an in-depth
-                    knowledge of general economics. I am also fascinated by technology and it's concomitant and wish to
-                    delve into it later on in the future. However as of now I am well versed in Defi, NFTs, crypto
-                    narratives, content creation, Onchain analysis, and economics.
+                <p class="hero_text_p">Hello, my name is Dred Ola, a crypto trader, instructor, analyst, and researcher who is interested in onboarding a new generation of crypto enthusiasts, building narratives, and generating crypto-based content. I love exploring economic tools and theories, and as a consequence, I have a thorough understanding of general economics. I'm also fascinated by technology and its concomitants, and I hope to learn more about it in the future. However, I also am proficient in Defi, NFTs, crypto narratives, content production, Onchain analysis, and economics.
                 <div class="external_link">
                     <a class="link" target="_blank" rel="noreferrer noopener" Reply
                         href="https://docs.google.com/document/d/1l0rhkOEgJaMmBr4ajFucmHUwvowzYg88CciQnCV6vrM/edit?usp=sharing"><svg
