--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Dred Ola — Portfolio">
+    <meta name="title" content="Akinsomi Favor — Portfolio">
     <meta name="description" content="Hello! Welcome to my personal portfolio">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="hhttps://wonderful-kepler-2ad1ff.netlify.app/">
-    <meta property="og:title" content="Dred Ola — Portfolio">
+    <meta property="og:url" content="hhttps://olred.netlify.app/">
+    <meta property="og:title" content="Akinsomi Favor — Portfolio">
     <meta property="og:description" content="Hello! Welcome to my personal portfolio">
     <meta property="og:image" content="https://i.pinimg.com/564x/03/72/90/03729001a56df746ed4ccbabc556db95.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="hhttps://wonderful-kepler-2ad1ff.netlify.app/">
-    <meta property="twitter:title" content="Dred Ola — Portfolio">
+    <meta property="twitter:title" content="Akinsomi Favor — Portfolio">
     <meta property="twitter:description" content="Hello! Welcome to my personal portfolio">
     <meta property="twitter:image" content="https://i.pinimg.com/564x/03/72/90/03729001a56df746ed4ccbabc556db95.jpg">
 
@@ -51,7 +51,7 @@
         <div class="hero">
             <div class="hero_text">
                 <h1>Crypto Analyst & Researcher</h1>
-                <p class="hero_text_p">Hello, my name is Dred Ola, a crypto trader, instructor, analyst, and researcher who is interested in onboarding a new generation of crypto enthusiasts, building narratives, and generating crypto-based content. I love exploring economic tools and theories, and as a consequence, I have a thorough understanding of general economics. I'm also fascinated by technology and its concomitants, and I hope to learn more about it in the future. However, I also am proficient in Defi, NFTs, crypto narratives, content production, Onchain analysis, and economics.
+                <p class="hero_text_p">Hello, my name is Akinsomi Favor, a crypto trader, instructor, analyst, and researcher who is interested in onboarding a new generation of crypto enthusiasts, building narratives, and generating crypto-based content. I love exploring economic tools and theories, and as a consequence, I have a thorough understanding of general economics. I'm also fascinated by technology and its concomitants, and I hope to learn more about it in the future. However, I also am proficient in Defi, NFTs, crypto narratives, content production, Onchain analysis, and economics.
                 <div class="external_link">
                     <a class="link" target="_blank" rel="noreferrer noopener" Reply
                         href="https://docs.google.com/document/d/1l0rhkOEgJaMmBr4ajFucmHUwvowzYg88CciQnCV6vrM/edit?usp=sharing"><svg
