--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/logo.ico">
-    <title>Dred Ola</title>
+    <title>Akinsomi Favor</title>
 </head>
 
 <body>
     <div class="style_wrapper">
         <nav>
-            <a class="site_logo" href="/">Dred Ola</a>
+            <a class="site_logo" href="/">Akinsomi Favor</a>
             <button class="logo" aria-label="Change Mode">
                 <label for="theme">
                     <input type="checkbox" name="" id="theme">
