--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         </nav>
         <div class="hero">
             <div class="hero_text">
-                <h1>Web Frontend Developer</h1>
-                <p class="hero_text_p">Hello! I'm Ayodeji Victor Adedapo, a Frontend Developer for the web, focused on
+                <h1>Web Frontend Engineer</h1>
+                <p class="hero_text_p">Hello! I'm Ayodeji Victor Adedapo, a Frontend Engineer for the web, focused on
                     creating beautiful and appealing User
                     interfaces. In my spare time, I work on CSS animation, explore libraries. My skills
                     includes <span class="lang">HTML</span>, <span class="lang">CSS</span>, <span
