--- a/index.html
+++ b/index.html
@@ -51,11 +51,7 @@
         <div class="hero">
             <div class="hero_text">
                 <h1>Web Frontend Engineer</h1>
-                <p class="hero_text_p">Hello! I'm Ayodeji Victor Adedapo, a Frontend Engineer for the web, focused on
-                    creating beautiful and appealing User
-                    interfaces. In my spare time, I work on CSS animation, explore libraries. My skills
-                    includes <span class="lang">HTML</span>, <span class="lang">CSS</span>, <span
-                        class="lang">Javascript</span>, <span class="lang">React js,</span> <span class="lang">Next js,</span> and more.
+                <p class="hero_text_p">Hello! I'm Ayodeji Victor Adedapo, and I am a Frontend Engineer with a passion for crafting visually stunning and user-friendly web interfaces. In my free time, I like to experiment with CSS animations and explore new libraries to enhance my skills. I specialize in a wide range of technologies, including Javascript, React.js, Next.js, Vue.js, Nuxt.js, Three.js, and webgl. With an eye for detail and a commitment to delivering exceptional results, I am dedicated to creating immersive user experiences that are both beautiful and functional.
                 <div class="external_link">
                     <a class="link" target="_blank" rel="noreferrer noopener"
                         href="https://docs.google.com/document/d/1Vimk9XPAlxsk4YXwPbQDdDkw_en-wdfFwgQfniRiQaw/edit?usp=sharing"><svg
